# familie-recipebook

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
server/: .env  Cargo.toml
server/sql/: init.sql
server/src/: healthcheck.rs  main.rs  sql.rs
server/src/auth/: models.rs
server/src/healthcheck/: routes.rs
src/: healthcheck.rs  main.rs
src/healthcheck/: controllers.rs  models.rs  routes.rs
