[package]
name = "familie-recipebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
serde = { version = "1.0.194", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "time"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
